...
                let filterQuery = filterQuery.lowercased()
                let conferences: [Conference] = filterQuery.isEmpty
                ? conferences
                : conferences.filter { conference in
                    conference.title.lowercased().contains(filterQuery)
                }
                ConferencesGrid(conferences: conferences)
            }
            .overlay {
                if isLoading {
                    ProgressView()
                }
            }
            #if !os(tvOS)
                .searchable(text: $filterQuery)
                .navigationTitle("Conferences")
            #endif
            .task {
                isLoading = true
                defer { isLoading = false }
                await refresh()
            }
...
